<resources>
    <string name="app_name">MyBlog</string>
    <string name="title">My Blog</string>
    <string name="sub_title">My Personal Blog</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_uo">Sign Up</string>
    <string name="terms">Agree to Terms and Conditions</string>
    <string name="terms_and_cond">Terms and Conditions</string>
    <string name="p_ID">Id: </string>
    <string name="p_Name">Name: </string>
    <string name="p_Email">Email: </string>
    <string name="p_CreatedDate">Date Created: </string>
</resources>